common/force-app/main/default/objects/Investee_Entity__c/Investee_Entity__c.object-meta.xml
<CustomObject>
    <description>This object is used in funds management to hold funds in an investment Vehicle.</description>
    <label>Investee Entity</label>
    <nameField>
        <label>Investee Entity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investee Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>