common/force-app/main/default/objects/Investee_Entity__c/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <label>ABN</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>