common/force-app/main/default/objects/Investee_Entity__c/fields/TFN__c.field-meta.xml
<CustomField>
    <fullName>TFN__c</fullName>
    <label>TFN</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>