common/force-app/main/default/objects/Investee_Entity__c/fields/Xero_ID_of_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Xero_ID_of_Vehicle__c</fullName>
    <inlineHelpText>This field holds the Xero ID of the Transaction</inlineHelpText>
    <label>Xero ID of Vehicle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>