common/force-app/main/default/objects/Investee_Entity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Associated_AFSL_License__c</columns>
    <columns>ABN__c</columns>
    <columns>ACN__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Xero_ID_of_Vehicle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>